assets/css/styles.css
* {
    box-sizing: border-box;
}

:root {
    --primary-color: #0f1b4c;
}

html {
    font-size: 62.5%;
}

body {
    font-size: 1.6rem;
    font-family: "Poppins", sans-serif;
}

/* Common */
a {
    text-decoration: none;
}

.content {
    width: 1110px;
    max-width: calc(100% - 48px);
    margin-left: auto;
    margin-right: auto;
}

.btn {
    display: inline-block;
    min-width: 98px;
    padding: 18px 16px;
    background: var(--primary-color);
    border-radius: 12px;
    font-weight: 500;
    font-size: 1.3rem;
    text-align: center;
    color: #ffffff;
}

.btn:hover {
    opacity: 0.9;
}

.line-clamp {
    display: -webkit-box;
    -webkit-line-clamp: var(--line-clamp, 2);
    -webkit-box-orient: vertical;
    overflow: hidden;
}

/* ======== Header ======== */
.header {
    position: relative;
    background: #e6f0ff;
    height: 100vh;
}

.navbar {
    display: flex;
    align-items: center;
    padding-top: 38px;
}

.navbar ul {
    display: flex;
    margin-left: 50px;
}

.navbar .actions {
    margin-left: auto;
}

.navbar ul a {
    font-weight: 500;
    font-size: 1.4rem;
    color: #4f5361;
    padding: 8px 14px;
}

.navbar ul a:hover {
    text-decoration: underline;
}

.navbar .action-link {
    font-weight: 500;
    font-size: 1.4rem;
    color: var(--primary-color);
}

.navbar .action-btn {
    padding: 13px 16px;
    margin-left: 18px;
    border-radius: 8px;
    font-size: 1.4rem;
}

.hero {
    margin-top: 130px;
}

.hero .info {
    width: 51%;
}

.hero .sub-title {
    font-weight: 500;
    font-size: 1.8rem;
    line-height: 1.5;
    letter-spacing: 0.01em;
    color: #687690;
}

.hero .title {
    margin-top: 8px;
    font-weight: 700;
    font-size: 6.2rem;
    line-height: 1.19;
    color: #000336;
}

.hero .desc {
    margin-top: 30px;
    font-weight: 400;
    font-size: 1.8rem;
    line-height: 1.78;
    color: #5a6473;
}

.hero-cta {
    min-width: 170px;
    margin-top: 40px;
}

.hero-img {
    position: absolute;
    right: calc((100vw - 1110px) / 2 - 100px);
    bottom: 0;
}

/* ======== Clients ======== */
.clients {
    margin-top: 122px;
}

.clients .row {
    display: flex;
    justify-content: space-between;
}

.clients .desc {
    font-weight: 500;
    font-size: 1.6rem;
    line-height: 1.25;
    color: #7d8589;
}

.clients .row-desc {
    margin-top: 23px;
}

.clients .images {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-top: 96px;
}

/* ======== Guides ======== */
.guides {
    margin-top: 200px;
}

.guides .sub-title {
    position: relative;
    font-weight: 600;
    font-size: 3.5rem;
    line-height: 1;
    text-align: center;
    color: #000339;
}

.guides .sub-title::before {
    position: absolute;
    top: -10px;
    content: "";
    display: inline-block;
    width: 41px;
    height: 4px;
    background: #000339;
    border-radius: 12px;
    left: 50%;
    transform: translate(-50%);
}

.guides .desc {
    width: 459px;
    max-width: 100%;
    margin: 20px auto 0;
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 1.88;
    text-align: center;
    color: #5a6473;
}

.list-guide {
    display: flex;
    justify-content: center;
    margin-top: 70px;
}

.guide-item {
    margin: 0 70px;
    text-align: center;
}

.guide-item .title {
    margin-top: 26px;
    font-weight: 500;
    font-size: 2rem;
    line-height: 1.1;
    color: #3b3c45;
}

.guide-item .link {
    display: inline-block;
    margin-top: 10px;
    font-weight: 600;
    font-size: 1.4rem;
    color: #0689ff;
}

.guide-item .arrow {
    margin-left: 6px;
}

.guide-cta {
    display: flex;
    justify-content: center;
    margin-top: 50px;
}

.guide-cta .btn {
    min-width: 170px;
}

/* ======== Featured ======== */
.featured {
    margin-top: 120px;
    padding: 110px 0;
    background: #f5fafe;
}

.featured .sub-title {
    font-weight: 600;
    font-size: 3.5rem;
    line-height: 1;
    color: #000339;
}

.featured .row {
    display: flex;
    justify-content: space-between;
    margin-top: 15px;
}

.featured .desc {
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 1.88;
    color: #5a6473;
}

.featured .link {
    display: flex;
    align-items: center;
    font-weight: 600;
    font-size: 1.8rem;
    color: #0689ff;
}

.featured .link .arrow {
    margin-left: 8px;
}

.featured .list {
    display: flex;
    gap: 30px;
    margin-top: 70px;
}

.featured .item {
    flex: 1;
    background-color: #fff;
    border-radius: 12px;
}

.featured .item .thumb {
    width: 100%;
    height: 227px;
    object-fit: cover;
    border-top-left-radius: 12px;
    border-top-right-radius: 12px;
}
.featured .item .body {
    padding: 17px 20px 24px;
}

.featured .item .title a {
    font-weight: 600;
    font-size: 2rem;
    line-height: 1;
    color: #000339;
}

.featured .item .desc {
    margin-top: 11px;
    font-weight: 500;
    font-size: 1.4rem;
    line-height: 1.5;
    color: #a3a6ab;
    word-break: break-all;
}

.featured .item .info {
    display: flex;
    align-items: center;
    margin-top: 21px;
}

.featured .item .icon {
    margin-left: 23px;
}

.featured .item .icon:first-child {
    margin-left: 0px;
}

.featured .item .label {
    margin-left: 8px;
    font-weight: 500;
    font-size: 1.4rem;
    letter-spacing: 0.01em;
    color: #444444;
}

